# datastruct

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
test/: __init__.py  test_linked_list.py  test_node.py  test_queue.py  test_stack.py
utils/: custom_queue.py  linked_list.py  node.py  stack.py
