[tool.poetry]
name = "datastruct"
version = "0.1.0"
description = ""
authors = ["fastpostya <fastpost@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
